# skillspec

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DISCUSSIONS.md  Justfile  LICENSE  MEMORY.md  README.md  README_DETAILED.md  install.sh  roadmap.md
crates/skillspec-authoring/: Cargo.toml
crates/skillspec-authoring/src/: compiler.rs  importer.rs  lib.rs  port_one_shot.rs  source_guard.rs
crates/skillspec-authoring/src/compiler/: contracts.rs  selection.rs
crates/skillspec-authoring/src/workspace_synthesizer/: evidence.rs  mod.rs  spec_builder.rs
crates/skillspec-cli/: Cargo.toml  LICENSE-APACHE  README.md
crates/skillspec-cli/spec/: grammar.md
crates/skillspec-cli/src/: act.rs  align.rs  capability.rs  command_path.rs  compiler.rs  decision.rs  deps.rs  doctor.rs  durable_lifecycle.rs  error.rs  grammar.rs  import_dependency_ledger.rs  importer.rs  imports.rs  install.rs  lib.rs  main.rs  model.rs  parser.rs  progress.rs  report.rs  router.rs  router_lifecycle.rs  sensemake.rs  source_map.rs  status.rs  trace.rs  visibility.rs  workspace_synthesizer.rs
crates/skillspec-cli/src/cli/: args.rs  dispatch.rs  mod.rs
crates/skillspec-cli/src/cli/args/: capability.rs  checklist.rs  deps.rs  durable.rs  grammar.rs  imports.rs  install.rs  mod.rs  progress.rs  router.rs  skills.rs  source.rs  trace.rs  types.rs  visibility.rs  workspace.rs
crates/skillspec-cli/src/cli/dispatch/: authoring_cmd.rs  capability_cmd.rs  checklist_cmd.rs  deps_cmd.rs  doctor_cmd.rs  durable_cmd.rs  grammar_cmd.rs  imports_cmd.rs  install_cmd.rs  mod.rs  progress_cmd.rs  router_cmd.rs  runtime_cmd.rs  skills_cmd.rs  source_cmd.rs  status_cmd.rs  trace_cmd.rs  visibility_cmd.rs  workspace_cmd.rs
crates/skillspec-cli/src/domain/: authoring.rs  checklist.rs  doctor.rs  evidence.rs  harness.rs  mod.rs  runtime.rs  workspace.rs
crates/skillspec-cli/src/execution/: align.rs  command_path.rs  progress.rs  report.rs  trace.rs
crates/skillspec-cli/src/execution/align/: ledger.rs  types.rs
crates/skillspec-cli/src/features/: capability.rs  checklist.rs  compiler.rs  doctor.rs  git_context.rs  importer.rs  metrics.rs  port_one_shot.rs  remote_source.rs  run_loop.rs  sensemake.rs  source_map.rs  workspace.rs
crates/skillspec-cli/src/features/checklist/: run.rs  shape_steps.rs  workspace_import.rs
crates/skillspec-cli/src/features/compiler/: contracts.rs  selection.rs
crates/skillspec-cli/src/features/doctor/: frontmatter.rs  metrics.rs  renderer.rs  risk.rs  workspace_report.rs
crates/skillspec-cli/src/features/guide/: fingerprint.rs  mod.rs  state.rs
crates/skillspec-cli/src/features/source_map/: builder.rs
crates/skillspec-cli/src/features/workspace/: compile.rs  converge.rs  import.rs  install.rs
crates/skillspec-cli/src/lifecycle/: install.rs  router.rs  router_lifecycle.rs  visibility.rs
crates/skillspec-cli/src/spec/: grammar.rs  parser.rs
crates/skillspec-cli/src/spec/parser/: validation.rs
crates/skillspec-cli/tests/: cli.rs
crates/skillspec-cli/tests/cli/: authoring.rs  capability_sensemake.rs  checklist.rs  cli_core.rs  doctor.rs  lifecycle.rs  package_snapshots.rs  runtime_contracts.rs  workspace_install.rs
crates/skillspec-cli/tests/support/: mod.rs
crates/skillspec-core/: Cargo.toml
crates/skillspec-core/src/: lib.rs
crates/skillspec-core/src/spec/: grammar.rs  import_dependency_ledger.rs
crates/skillspec-doctor/: Cargo.toml
crates/skillspec-doctor/src/: lib.rs  remote_source.rs  renderer.rs  source_map.rs  types.rs  workspace_package_profile.rs  workspace_report.rs
crates/skillspec-doctor/src/renderer/: assessment_scope.rs  shape_contract.rs  workspace_identity.rs
crates/skillspec-doctor/src/source_map/: builder.rs
crates/skillspec-harness/: Cargo.toml
crates/skillspec-harness-lab/: Cargo.toml
crates/skillspec-harness-lab/baselines/: 09-harness-lab-core.json  10-doctor-matrix.json  11-import-matrix.json  12-imported-skill-runtime.json  13-router-harness-lab.json  14-durable-harness-lab.json  15-durable-rote-exec-live.json  15-durable-rote-exec-proof.json  17-pseudo-harness-simulator.json
crates/skillspec-harness-lab/fixtures/rote-install-snapshot/: README.md
crates/skillspec-harness-lab/src/: assertions.rs  command.rs  fixtures.rs  lab.rs  lib.rs  paths.rs  report.rs  temp.rs
crates/skillspec-harness-lab/tests/: core.rs  doctor.rs  durable.rs  durable_rote_exec.rs  import.rs  imported_runtime.rs  pseudo_harness.rs  router.rs
crates/skillspec-harness-lab/tests/durable_matrix/: commands.rs  fixture.rs  lifecycle.rs  mod.rs  mode.rs  preflight.rs  router.rs
crates/skillspec-harness-lab/tests/durable_rote_exec_matrix/: commands.rs  contract.rs  fixture.rs  live.rs  mod.rs
crates/skillspec-harness-lab/tests/import_matrix/: helpers.rs  mod.rs  single.rs  workspace.rs
crates/skillspec-harness-lab/tests/imported_runtime_matrix/: commands.rs  compile_install.rs  fixture.rs  mod.rs  proof.rs
crates/skillspec-harness-lab/tests/pseudo_harness_matrix/: commands.rs  durable.rs  fixture.rs  imported.rs  mod.rs  router.rs  simulator.rs
crates/skillspec-harness-lab/tests/router_matrix/: commands.rs  fixture.rs  guard.rs  install.rs  mod.rs  mode.rs  route.rs  uninstall.rs
crates/skillspec-harness/src/: durable_lifecycle.rs  install.rs  lib.rs  router.rs  router_lifecycle.rs  status.rs  visibility.rs
crates/skillspec-harness/src/router_lifecycle/: hooks.rs  render.rs  template.rs
crates/skillspec-harness/src/router_policy/: apply.rs  mod.rs  model.rs  render.rs  store.rs  target.rs
crates/skillspec-runtime/: Cargo.toml
crates/skillspec-runtime/src/: act.rs  align.rs  decision.rs  deps.rs  lib.rs  progress.rs  report.rs  run_loop.rs  trace.rs
crates/skillspec-runtime/src/align/: ledger.rs  types.rs
crates/skillspec-runtime/src/guide/: fingerprint.rs  mod.rs  render.rs  state.rs  types.rs
crates/skillspec-workspace/: Cargo.toml
crates/skillspec-workspace/src/: compile.rs  converge.rs  import.rs  install.rs  lib.rs  readiness.rs
crates/skillspec-workspace/src/install/: package_reports.rs  shape_preservation.rs  visibility_plan.rs
(+429 files in other folders)
