[workspace]
members = [
    "crates/skillspec-cli",
    "crates/skillspec-authoring",
    "crates/skillspec-core",
    "crates/skillspec-runtime",
    "crates/skillspec-doctor",
    "crates/skillspec-harness",
    "crates/skillspec-harness-lab",
    "crates/skillspec-workspace",
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/modiqo/skillspec"
