[package]
name = "skillspec"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for validating, testing, and compiling SkillSpec files"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
markdown = { version = "1.0.0", features = ["serde"] }
rusqlite = { version = "0.32.1", features = ["bundled"] }
thiserror = "2.0.12"

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }

[[bin]]
name = "skillspec"
path = "src/main.rs"
