[package]
name = "skillspec"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CLI for validating, testing, and compiling SkillSpec files"
readme = "README.md"
homepage = "https://github.com/modiqo/skillspec"
documentation = "https://github.com/modiqo/skillspec/tree/main/docs"
keywords = ["skillspec", "agents", "skills", "cli", "alignment"]
categories = ["command-line-utilities", "development-tools"]
include = [
    "Cargo.toml",
    "Cargo.lock",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "src/**",
    "spec/**",
]

[dependencies]
skillspec-authoring = { version = "0.1.7", path = "../skillspec-authoring" }
skillspec-core = { version = "0.1.7", path = "../skillspec-core" }
skillspec-doctor = { version = "0.1.7", path = "../skillspec-doctor" }
skillspec-harness = { version = "0.1.7", path = "../skillspec-harness" }
skillspec-runtime = { version = "0.1.7", path = "../skillspec-runtime" }
skillspec-workspace = { version = "0.1.7", path = "../skillspec-workspace" }
clap = { version = "4.5.40", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"

[dev-dependencies]
jsonschema = { version = "0.46.5", default-features = false }

[[bin]]
name = "skillspec"
path = "src/main.rs"
