[package]
name = "skillspec-runtime"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal runtime execution modules for the SkillSpec CLI"

[dependencies]
skillspec-core = { version = "0.1.7", path = "../skillspec-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
