[package]
name = "skillspec-workspace"
version = "0.1.7"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Internal workspace authoring graph modules for the SkillSpec CLI"

[dependencies]
skillspec-authoring = { version = "0.1.7", path = "../skillspec-authoring" }
skillspec-core = { version = "0.1.7", path = "../skillspec-core" }
skillspec-doctor = { version = "0.1.7", path = "../skillspec-doctor" }
skillspec-harness = { version = "0.1.7", path = "../skillspec-harness" }
regex = "1.12.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.9"
